HTML - 웹페이지 만들기 1 CSS

--- a/HTML_CSS/HTML_기초2/shop.css
+++ b/HTML_CSS/HTML_기초2/shop.css
@@ -4,6 +4,7 @@
 }
 .contents{
     width:960px;
+    margin: 0 auto;
 }
 a{
     text-decoration: none;
@@ -57,7 +58,14 @@ img{
 #intro nav ul li a{
     font-size: 20px;
     font-weight: bold;
+    transition: color 0.3s;
 }
+#intro nav ul li a:hover{
+    color: #fbfbfb;
+}
+
+
+/*Main CSS*/
 #main article{
     width: 50%;
     height: 320px;
