HTML - 웹페이지 만들기 1 CSS
 참고 : [ESG] SW 엔지니어 트랙

--- a/HTML_CSS/HTML_기초2/shop.css
+++ b/HTML_CSS/HTML_기초2/shop.css
@@ -78,16 +78,36 @@ img{
 }
 #main article.one{
     background-color: aqua;
+    transition: background-color 0.3s;
 }
 #main article.two{
     background-color: aquamarine;
+    transition: background-color 0.3s;
 }
 #main article.three{
     background-color: azure;
+    transition: background-color 0.3s;
 }
 #main article.four{
     background-color: cyan;
+    transition: background-color 0.3s;
 }
+
+/*main article hover*/
+#main article.one:hover{
+    background-color: lavenderblush;
+}
+#main article.two:hover{
+    background-color: lightpink;
+}
+#main article.three:hover{
+    background-color: pink;
+}
+#main article.four:hover{
+    background-color:mistyrose;
+}
+
+
 #main article img{
     width: 100%;
 }
