--- a/HTML_CSS/HTML_기초2/shop.css
+++ b/HTML_CSS/HTML_기초2/shop.css
@@ -1,156 +1,243 @@
-*{
-    margin: 0;
+/*************
+*** Default ***
+*************/
+* {
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+.container {
+  width: 960px;
+  margin: 0 auto;
+}
+
+/*************
+*** Header ***
+*************/
+#intro {
+  width: 100%;
+  height: 80px;
+}
+
+#intro h1 {
+  float: left;
+  width: 50%;
+  height: 80px;
+  background-color: #fbfbfb;
+}
+
+#intro h1 a {
+  display: block;
+  font-size: 30px;
+  padding: 22px 0 0 30px;
+}
+
+#intro nav {
+  float: right;
+
+  width: 50%;
+  height: 80px;
+}
+
+#intro nav ul li {
+  float: left;
+
+  width: 33.3333333%;
+  height: 80px;
+
+  text-align: center;
+
+  line-height: 80px;
+}
+
+#intro nav ul li.one {
+  background-color: #efeff6;
+}
+
+#intro nav ul li.two {
+  background-color: #dcdcec;
+}
+
+#intro nav ul li.three {
+  background-color: #cbcae3;
+}
+
+#intro nav ul li a {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+/*************
+*** Main ***
+*************/
+/* 제품 디자인 */
+#main article {
+  float: left;
+
+  width: 50%;
+  height: 320px;
+}
+
+#main article a {
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  color: #fff;
+}
+
+#main article.one {
+  background-color: aqua;
+}
+
+#main article.two {
+  background-color: aquamarine;
+}
+
+#main article.three {
+  background-color: azure;
+}
+
+#main article img {
+  width: 100%;
+}
+
+#main article h2 {
+  color: #fff;
+  font-size: 25px;
+  text-align: center;
+
+  padding: 10px 0;
+}
+
+/* 중간 텍스트 */
+#main article.text {
+  width: 100%;
+  height: 66px;
+}
+
+#main article.text p {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 20px 0;
+}
+
+/*************
+*** footer ***
+*************/
+#footer {
+  clear: both;
+  width: 100%;
+  height: 80px;
+  background-color: #f9f9f9;
+}
+
+#footer .copyright {
+  float: left;
+  width: 50%;
+}
+
+#footer .address {
+  float: right;
+
+  width: 50%;
+}
+
+#footer .copyright p {
+  font-size: 14px;
+  color: #999;
+
+  padding: 32px 0 0 40px;
+}
+
+#footer .address p {
+  text-align: right;
+
+  font-size: 14px;
+  color: #999;
+
+  padding: 32px 40px 0 0;
+}
+
+#intro nav ul li a {
+  transition: color 0.3s;
+}
+#intro nav ul li a:hover {
+  color: #917f7f;
+}
+
+#main article.one,
+#main article.two,
+#main article.three {
+  transition: background-color 0.3s;
+}
+
+#main article.one:hover {
+  background-color: lavenderblush;
+}
+#main article.two:hover {
+  background-color: lightpink;
+}
+#main article.three:hover {
+  background-color: pink;
+}
+
+#main article img {
+  transition: all 0.3s;
+}
+#main article img:hover {
+  transform: scale(1.2);
+}
+
+@media (min-width: 320px) and (max-width: 800px) {
+  .container {
+    width: 640px;
+  }
+
+  #intro {
+    width: 100%;
+  }
+
+  #intro h1 {
+    width: 100%;
+    height: 160px;
+  }
+
+  #intro h1 a {
+    text-align: center;
+    padding: 22px 0 0 0;
+  }
+
+  #intro nav {
+    width: 100%;
+  }
+
+  #main article {
+    width: 100%;
+    height: 420px;
+  }
+  #footer {
+    padding: 30px 0;
+  }
+  #footer .copyright,
+  #footer .address {
+    width: 100%;
+  }
+  #footer .copyright p,
+  #footer .address p {
+    text-align: center;
     padding: 0;
-}
-.contents{
-    width:960px;
-    margin: 0 auto;
-}
-a{
-    text-decoration: none;
-    color: black;
-}
-ol,ul{
-    list-style: none;
-}
-img{
-    vertical-align: middle; 
-    /*수직 정렬을 중앙으로 하겠다*/
-    /*img : inline 요소. 공백이 기본적으로 생기므로 
-    default 값으로 vertical-align : middle을 넣어줘서 공백을 제거*/
-}
-#intro{
-    width: 100%; /*960px*/
-    height: 80px;
-}
-#intro h1{
-    float: left;
-    width: 50%; /*480px*/
-    height: 80px;
-    background-color: #fbfbfb;
-}
-#intro h1 a{
-    display: block;
-    font-size: 30px;
-    padding: 20px 0 0 30px;
-}
-#intro nav{
-    float: right;
-    width: 50%; 
-    height: 80px;
-}
-#intro nav ul li{   
-    width: 33.33333%;
-    height: 80px;
-    float: left;
-    text-align: center;
-    line-height: 80px;
-}
-#intro nav ul li.one{
-    background-color: lavenderblush;
-}
-#intro nav ul li.two{
-    background-color: lightpink;
-}
-#intro nav ul li.three{
-    background-color: pink
-}
-#intro nav ul li a{
-    font-size: 20px;
-    font-weight: bold;
-    transition: color 0.3s;
-}
-#intro nav ul li a:hover{
-    color: #fbfbfb;
-}
-
-
-/*Main CSS*/
-#main article{
-    width: 50%;
-    height: 320px;
-    float:left;
-}
-#main article a{
-    display: block;
-    width: 100%;
-    height: 100%;
-}
-#main article.one{
-    background-color: aqua;
-    transition: background-color 0.3s;
-}
-#main article.two{
-    background-color: aquamarine;
-    transition: background-color 0.3s;
-}
-#main article.three{
-    background-color: azure;
-    transition: background-color 0.3s;
-}
-#main article.four{
-    background-color: cyan;
-    transition: background-color 0.3s;
-}
-
-/*main article hover*/
-#main article.one:hover{
-    background-color: lavenderblush;
-}
-#main article.two:hover{
-    background-color: lightpink;
-}
-#main article.three:hover{
-    background-color: pink;
-}
-#main article.four:hover{
-    background-color:mistyrose;
-}
-
-
-#main article img{
-    width: 100%;
-}
-#main article h2{
-    color: black;
-    text-align: center;
-    font-size: 20px;
-    padding: 5px 0;
-}
-#main article.text{
-    width: 100%;
-    height: 60px;
-}
-#main article.text p{
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    line-height: 60px;
-}
-
-/*footer CSS*/
-#footer{
-    width:100%;
-    height: 80px;
-    clear: both;
-    background-color: #f9f9f9;
-}
-#footer .copyright{
-    float: left;
-    width: 50%;
-}
-#footer .address{
-    float: right;
-    width: 50%;
-}
-#footer .copyright p{
-    color:#999;
-    font-size: 14px;
-    padding: 30px 0 0 40px;
-}
-#footer .address p{
-    color:#999;
-    font-size: 14px;
-    padding: 30px 40px 0 0;
-    text-align: center;
+  }
+  #footer .address p {
+    padding-top: 20px;
+  }
 }
